<resources>
    <string name="app_name">多视图日历</string>
    <string name="tab_month">月视图</string>
    <string name="tab_week">周视图</string>
    <string name="tab_day">日视图</string>
    <string name="content_description_add_event">新增日程</string>
    <string name="label_no_events">暂无日程</string>
    <string name="label_select_date">选择日期</string>
    <string name="label_week_range">%1$s - %2$s</string>
    <string name="label_event_list_header">当天日程</string>
    <string name="editor_title_new_event">创建日程</string>
    <string name="editor_title_edit_event">编辑日程</string>
    <string name="hint_event_title">标题</string>
    <string name="hint_event_location">地点</string>
    <string name="hint_event_description">备注</string>
    <string name="label_start_time">开始</string>
    <string name="label_end_time">结束</string>
    <string name="label_all_day">全天事件</string>
    <string name="label_reminder">提醒</string>
    <string name="label_reminder_none">不提醒</string>
    <string name="label_reminder_5">提前5分钟</string>
    <string name="label_reminder_15">提前15分钟</string>
    <string name="label_reminder_30">提前30分钟</string>
    <string name="label_reminder_60">提前1小时</string>
    <string name="label_reminder_day">提前1天</string>
    <string name="action_choose_date">选择日期</string>
    <string name="action_choose_time">选择时间</string>
    <string name="action_prev">上一页</string>
    <string name="action_next">下一页</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="action_cancel">取消</string>
    <string name="dialog_delete_message">确认删除该日程？</string>
    <string name="notification_default_title">日程提醒</string>
    <string name="notification_default_message">您的日程即将开始</string>
    <string name="month_title_format">%1$d年%2$d月</string>
    <string name="week_day_format">%1$d/%2$d</string>
</resources>